#25 etablissement de la connexion